# My-First-Repository

./: README.md  Welcome file.md  branches.py  first_program.py  first_program_ubuntu.py  first_test_debian.py  how_to_undo_commands.py  merge.py  pyproject.toml  speechrecognition.py  testing_branches.py  testing_branchs_again.py  testing_poetry.py  undoing_something.py  undoing_somethings.py
git_for_begineers/: change_something.py  first_program.py  merge.py  new_fram_in_first_branch.py  undoing_somethings.py
multiprocessos/: 01-mestre.txt  02-sincrono.py  03-multiprocessing.py  04-join.py  05-loop.py  06-args.py  07-mestre  08-pool_exec.py  09-pool_loop.py  1-mestre.txt  10-interavel_args.py  11-submitXmap.py  12-mestre.txt  13-ex_real.py  13.1-ex_real.py  13.2-ex_real.py  13.3-com_threads.py
threads_concurrent/: 03-threads.py  04-join.py  05-loop.py  06-args.py  08-pool_exec.py  09-pool_loop.py  1-mestre.txt  1-sincrono.py  10-submitXmap.py  11-submitXmap.py  12-ex_real.py  13-ex_real.py  6-mestre.txt  9-interavel_args.py
