[tool.poetry]
name = "my-first-repository"
version = "0.1.0"
description = "Just to test and study somethings"
authors = ["Julio <ramosjulio771@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
speechrecognition = "^3.6.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
